Fix off-centered styling

--- a/meopets/src/App.css
+++ b/meopets/src/App.css
@@ -1,9 +1,9 @@
 /* All pages */
 body {
     background: #ACE3FF;
-    font-family: Roboto;
     min-width: 1100px;
 }
+
 nav {
     box-shadow: 0px 4px 4px grey;
     background-color: #FFA9BA;
@@ -31,22 +31,19 @@ p {
     text-decoration: none;
     margin-right: 30px;
 }
-/*.nav-txt{*/
-/*    margin-left: 15px;*/
-/*    font-size: 30px;*/
-/*    margin-top: 0;*/
-/*    color: #FAFAFA;*/
-/*}*/
 
 /* Login */
 .form-title {
-    text-align: center;
+    /*margin-left: -30px;*/
+    /*text-align: center;*/
 }
 .login-form {
     background-color: #FFF4AA;
     border-color: #88C6ED;
     box-sizing: border-box;
     border-style: inset;
+    margin-left: auto;
+    margin-right: auto;
     max-width: 350px;
     padding: 30px 40px 30px 40px;
 }
@@ -61,6 +58,7 @@ p {
 }
 .login-page {
     display: grid;
+    grid-template-rows: 6em 17em 5em;
     justify-content: center;
 }
 
